fix nla jdk mem settings